cluster/apps/networking/whoami/middleware-health.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: add-health
  namespace: networking
spec:
  replacePath:
    path: /health
