cluster/apps/networking/whoami/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: networking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "whoami"
  template:
    metadata:
      labels:
        app: "whoami"
    spec:
      containers:
        - name: whoami
          image: containous/whoami
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: networking
spec:
  selector:
    app: "whoami"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
