cluster/apps/networking/whoami/ingress-internal.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-internal
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - "whoami.${SECRET_DOMAIN}"
      secretName: "whoami-tls"
  rules:
    - host: "whoami.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: whoami
                port:
                  number: 80
            path: /
            pathType: Prefix
